--- a/client/web/admin/src/themes/corteza-base/custom.scss
+++ b/client/web/admin/src/themes/corteza-base/custom.scss
@@ -28,8 +28,17 @@ button:disabled {
   cursor: pointer;
 }
 
+
+.gap-1 {
+  gap: 0.5rem;
+}
+
+.gap-2 {
+  gap: 1rem;
+}
+
 .gap-3 {
-  gap: 1.5rem;
+    gap: 1.5rem;
 }
 
 .grab {
