Add text primary to form groups across all webapps

--- a/client/web/compose/src/themes/corteza-base/custom.scss
+++ b/client/web/compose/src/themes/corteza-base/custom.scss
@@ -67,7 +67,7 @@ th {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   margin-bottom: 0;
-  font-size: .9rem;
+  font-size: 0.9rem;
   border-radius: 0.25rem;
 
   .vs__selected-options {
