Replaces Vue-selects in the Admin web app

--- a/client/web/admin/src/themes/corteza-base/index.scss
+++ b/client/web/admin/src/themes/corteza-base/index.scss
@@ -5,3 +5,5 @@
 @import '~bootstrap-vue/src/index.scss';
 @import "custom";
 @import "./poppins.scss";
+
+// Check if someone made manual adjustments to clearable styling for vue-select
